2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp, src/gnomemeeting.cpp: Changed timeouts values.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Fixed startup sequence so that the
	GUI is created before the endpoint.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Removed unused LID keys.
	
	* src/common.h: Removed some unused widgets.
	
	* src/config.cpp: Make sure that the same device is used for player
	and recorder when Quicknet device is selectionned. Get back to normal
	devices when Quicknet is unselectionned.
	
	* src/endpoint.cpp, src/endpoint.h: Changed UpdateConfig.
	
	* src/ils.cpp: Added support for xstatus attribute.
	
	* src/lid.cpp: The device is now stored in audio_player key.
	
	* src/main_window.cpp: Added callback on idle.
	
	* src/menu.cpp: Fixed wrong indices for View.
	
	* src/pref_window.cpp: Removed unused LID widget.
	
	* src/sound_handling.cpp: Added auto-detection of LID devices.
	
	* src/urlhandler.cpp: Changed message on User Not Found.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp, src/config.cpp: Fixed widget number for DND and AA.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Added ldap_visible key to permit
	to users to register to ILS and be invisible but still callable
	using the callto:// address.

	* src/common.h: Added ldap_visible widget.

	* src/config.cpp: Added notifiers for the new LDAP_KEY/visible.

	* src/druid.cpp: Changed the personal data user page. The user has
	now to enter a first name, a last name, and an e-mail address. He
	automatically gets a valid callto address, but he can choose to be
	visible or not in the online directory of users.

	* src/ils.cpp: Added support for the new ilsa attribute.

	* src/pref_window.cpp: Add a pref for visibility.
	
	* xdap_data/ils_nm_mod.xml, xdap_data/ils_nm_reg.xml: See src/ils.cpp.
	