@@ -710,6 +710,7 @@ void gnomemeeting_init_pref_window_general (GtkWidget *notebook)
   /* Add all the fields */                                                     
   pw->firstname = 
     gnomemeeting_table_add_entry (table, _("First Name:"), "/apps/gnomemeeting/personal_data/firstname", _("Enter your first name."), 0);
+  gtk_widget_set_size_request (GTK_WIDGET (pw->firstname), 250, -1);
 
   pw->surname = 
     gnomemeeting_table_add_entry (table, _("Last Name:"), "/apps/gnomemeeting/personal_data/lastname", _("Enter your last name."), 1);
