@@ -1,3 +1,9 @@
+2003-01-05 Damien Sandras  <dsandras@seconix.com>
+
+	* src/ldap_window.cpp: Selects the first server on startup.
+
+	* src/pref_window.cpp: Made the personal data entries larger.
+	
 2003-01-04 Damien Sandras  <dsandras@seconix.com>
 
 	* src/main_window.cpp, src/gnomemeeting.cpp: Changed timeouts values.
